test/conformance/chainsaw/validate/clusterpolicy/standard/apicalls-deprecated/lazyload/chainsaw-step-01-apply-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-unique-host
spec:
  failurePolicy: Fail
  rules:
  - context:
    - name: requestIngressClass
      variable:
        jmesPath: request.object.metadata.annotations."kubernetes.io/ingress.class"
    - apiCall:
        jmesPath: items[?metadata.name != '{{ request.object.metadata.name }}']
        urlPath: /apis/networking.k8s.io/v1/ingresses
      name: ingresses
    match:
      all:
      - resources:
          kinds:
          - Ingress
    name: unique-ingress-against-other-ingress-class
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
    validate:
      deny:
        conditions:
          any:
          - key: '{{ request.object.spec.rules[].host }}'
            operator: AnyIn
            value: '{{ingresses[?metadata.annotations."kubernetes.io/ingress.class"
              != ''{{ request.object.metadata.annotations."kubernetes.io/ingress.class"
              }}''].spec.rules[].host }}'
      message: |
        Ingress must have a unique hostname across different ingress classes
  validationFailureAction: Enforce
