test/conformance/chainsaw/validate/clusterpolicy/standard/apicalls-deprecated/lazyload/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: lazyload
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
    - assert:
        file: chainsaw-step-01-assert-1-1.yaml
    - assert:
        file: chainsaw-step-01-assert-1-2.yaml
  - name: step-02
    try:
    - delete:
        ref:
          apiVersion: networking.k8s.io/v1
          kind: Ingress
          name: my-app-ingress
          namespace: test-ingress
